<resources>
    <string name="app_name">Tripenary</string>
    <string name="place_placeholder">Some Place</string>
    <string name="date_placeholder">01 Jan 2019 &#8211; 02 Jan 2019</string>
    <string name="add_planned_trips">+ Add Planned Trips</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="planned_trips_label">My Planned Trips</string>
    <string name="add_new_trips_label">Add New Trips</string>
    
    <string name="label_trip_name">Trip Name</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="add">Add</string>
    <string name="label_slash">/</string>
    <string name="date_picker_dialog">date picker dialog</string>
    <string name="dd_placeholder">01</string>
    <string name="mm_placeholder">01</string>
    <string name="yyyy_placeholder">2019</string>
    <string name="cancel">Cancel</string>
    
    <string-array name="dd_array">
        <item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="mm_array">
        <item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item>
        <item>11</item><item>12</item>
    </string-array>

    <string name="day_plans_label">Day Plans</string>
    <string name="add_day_plan">+ Add Day Plan</string>
    <string name="day_plan_date_placeholder">27 Aug 2019</string>
    <string name="day_plan_title_placeholder">Arrival</string>
    <string name="add_new_day_plan_label">Add New Day Plan</string>
    <string name="label_plan_title">Plan Title</string>
    <string name="label_day_trip_date">Plan Date</string>
    <string name="event_plans_label">My Event Title</string>
    <string name="add_new_event">+ Add New Event</string>
    <string name="event_plan_time_placeholder">09:00 &#8211; 10:00</string>
    <string name="event_plan_title_placeholder">Arrival</string>
    <string name="location_icon">Location Icon</string>
    <string name="event_location_placeholder">Jakarta</string>
    <string name="attachment_icon">Attachment Icon</string>
    <string name="add_new_event_plan_label">Add New Event</string>
    <string name="label_event_name">Event Name</string>
    <string name="start">Start</string>
    <string name="time_h_placeholder">8</string>
    <string name="label_colon">:</string>
    <string name="time_minmin_placeholder">00</string>
    <string name="end">End</string>

    <string-array name="hour_array">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item>
        <item>6</item><item>7</item><item>8</item><item>9</item><item>10</item>
        <item>11</item><item>12</item>
    </string-array>

    <string-array name="minmin_array">
        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
        <item>31</item><item>32</item><item>33</item><item>34</item><item>35</item>
        <item>36</item><item>37</item><item>38</item><item>39</item><item>40</item>
        <item>41</item><item>42</item><item>43</item><item>44</item><item>45</item>
        <item>46</item><item>47</item><item>48</item><item>49</item><item>50</item>
        <item>51</item><item>52</item><item>53</item><item>54</item><item>55</item>
        <item>56</item><item>57</item><item>58</item><item>59</item>
    </string-array>
    <string-array name="am_pm_array">
        <item>AM</item><item>PM</item>
    </string-array>

    <string name="add_location">Add Location</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="add_description">Add Description</string>

    <string name="channel_name">Tripenary notification channel</string>
    <string name="channel_description">asd</string>
    <string name="search_trip_destination">Search Trip Destination</string>
    <string name="google_places_key"
        translatable="false"
        templateMergeStrategy="preserve">AIzaSyBIFUkxAq_mg_SKqEO-FAKaR987E4tj1iQ</string>
    <string name="holiday">Holiday!</string>
</resources>
