<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_plan_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_plan_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_weight="1"
            android:text="@string/event_plan_time_placeholder" />

        <TextView
            android:id="@+id/event_plan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/event_plan_title_placeholder"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/ic_maps_and_flags" />
            <TextView
                android:id="@+id/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_location_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/attachment_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/attachment_icon"
                android:src="@drawable/ic_paper_clip_outline" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="12dp"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/event_attachment_image_view"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_picture"
                    android:contentDescription="@string/place_placeholder"
                    />
                <TextView
                    android:id="@+id/attachment_image_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_placeholder"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/description_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/add_description"
                android:src="@drawable/ic_chat" />
            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_location_placeholder" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>