<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/planned_trips_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/date_placeholder" />

        <TextView
            android:id="@+id/planned_trips_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/place_placeholder"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="end"
            android:contentDescription="@string/right_arrow"
            android:src="@drawable/keyboard_arrow_right_24px" />
    </LinearLayout>



</LinearLayout>