<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_planned_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planned_trips_label"
                android:textStyle="bold"
                android:textSize="12pt"
                android:padding="8dp"
                android:background="@drawable/border"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_planned_trips" >


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/planned_trips_recycler_view"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

            </FrameLayout>

            <Button
                android:id="@+id/add_planned_trips_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/add_planned_trips"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_container" />

            <Button
                android:id="@+id/search_place_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/search_trip_destination"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_planned_trips_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>